...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NLk-yK-JTh">
                                <rect key="frame" x="244" y="372" width="280" height="280"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter your stock here..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="esZ-MJ-kcl">
                                        <rect key="frame" x="69.5" y="154" width="141" height="28"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters" autocorrectionType="no" spellCheckingType="no" keyboardAppearance="alert" returnKeyType="done"/>
                                    </textField>
...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MNe-ke-upb">
                                        <rect key="frame" x="125" y="190" width="29" height="30.5"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                        <state key="normal" title="Add"/>
                                        <connections>
                                            <action selector="addStocksButtonPressed:" destination="gNh-P8-V3Q" eventType="touchDown" id="qCZ-pg-CmF"/>
                                        </connections>
                                    </button>
                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="4m6-nZ-9H2">
                                        <rect key="frame" x="214" y="158" width="18.5" height="20"/>
...
                                                        <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="snN-aC-KIf">
                                                            <rect key="frame" x="8" y="0.0" width="707" height="30"/>
                                                            <subviews>
                                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g4X-Py-la9">
                                                                    <rect key="frame" x="0.0" y="0.0" width="235.5" height="30"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                                    <state key="normal" title="More">
                                                                        <color key="titleColor" name="alternateSelectedControlTextColor" catalog="System" colorSpace="catalog"/>
                                                                    </state>
                                                                    <connections>
                                                                        <action selector="chartButtonClicked:" destination="GSq-Fg-4mh" eventType="touchDown" id="l3I-b1-NtL"/>
                                                                        <segue destination="RJW-oO-T96" kind="show" id="ZJj-kN-gcz"/>
                                                                    </connections>
...
