...
                                      "Ernings per share: ", "EAverage daily volume: ", "Revenue: "]
}

struct AlertValues {
    static var priceHeader = "Price: "
    static var alertTitle = "Opa!"
    static var alertSuccessTitle = "Success!"

    static var alertDescriptionCouldNotConnect = "Couldn't connect to database. Please, try again!"
    static var alertDescriptionMinimumTwoStocks = "To use Stoxxx Universe you need to have two or more stocks in portfolio"
    static var alertDescriptionCheckInput = "Please, check your input and try again."
    static var alertDescriptionCouldNotFindStock = "We couldn't find this stock symbol. Please, check your input and try again."
     static var alertDescriptionStockAlreadyExists = "This stock symbol is already in your portfolio"

    static var alertDescriptionCouldNotFetchData = "We couldn't fetch sufficient data for this stock symbol."

    static var alertButtonText = "OK"

    static func createDescriptionAddedSuccessfuly(companyName: String, symbol: String) -> String {
        return "\(companyName) with symbol \(symbol) has been successfuly added to your portfolio."

    }

...
